--- a/.github/workflows/validate-nextjs-pr.yml
+++ b/.github/workflows/validate-nextjs-pr.yml
@@ -5,28 +5,47 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-
   build-and-test:
     name: Build and Test NextJS Project
     runs-on: ubuntu-latest
-
+    
+    # Add this to ensure the status check is always reported
+    permissions:
+      checks: write
+      contents: read
+      
     steps:
-      - uses: actions/checkout@v3
+      # Add initial status check
+      - name: Create Status Check
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { context } = require('@actions/github');
+            await github.rest.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: 'Validate NextJS Pull Request',
+              head_sha: context.payload.pull_request.head.sha,
+              status: 'in_progress',
+              started_at: new Date()
+            });
 
+      - uses: actions/checkout@v3
+      
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-
+          
       - name: Install dependencies
         run: npm ci
-
+        
       - name: Lint code
         run: npm run lint
-
+        
       - name: Build application
         run: npm run build
-
+        
       - name: Upload artifact on failure
         uses: actions/upload-artifact@v3
         if: failure()
@@ -34,3 +53,36 @@ jobs:
           name: build-logs
           path: |
             npm-debug.log
+            
+      # Add final status update
+      - name: Update Status Check (Success)
+        if: success()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { context } = require('@actions/github');
+            await github.rest.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: 'Validate NextJS Pull Request',
+              head_sha: context.payload.pull_request.head.sha,
+              status: 'completed',
+              conclusion: 'success',
+              completed_at: new Date()
+            });
+            
+      - name: Update Status Check (Failure)
+        if: failure()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { context } = require('@actions/github');
+            await github.rest.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: 'Validate NextJS Pull Request',
+              head_sha: context.payload.pull_request.head.sha,
+              status: 'completed',
+              conclusion: 'failure',
+              completed_at: new Date()
+            });
