--- a/.github/workflows/validate-nextjs-pr.yml
+++ b/.github/workflows/validate-nextjs-pr.yml
@@ -3,28 +3,28 @@ name: Validate NextJS Pull Request
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-
+  workflow_dispatch:
 jobs:
   build-and-test:
     name: Build and Test NextJS Project
     runs-on: ubuntu-latest
     
     permissions:
-      checks: write
+      statuses: write
       contents: read
       
     steps:
-      - name: Create Status Check
+      - name: Create Initial Status
         uses: actions/github-script@v6
         with:
           script: |
-            await github.rest.checks.create({
+            await github.rest.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              name: 'Validate NextJS Pull Request',
-              head_sha: context.payload.pull_request.head.sha,
-              status: 'in_progress',
-              started_at: new Date()
+              sha: context.payload.pull_request.head.sha,
+              state: 'pending',
+              context: 'Validate NextJS Pull Request',
+              description: 'Build and test in progress'
             });
 
       - uses: actions/checkout@v3
@@ -51,32 +51,30 @@ jobs:
           path: |
             npm-debug.log
             
-      - name: Update Status Check (Success)
+      - name: Update Status (Success)
         if: success()
         uses: actions/github-script@v6
         with:
           script: |
-            await github.rest.checks.create({
+            await github.rest.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              name: 'Validate NextJS Pull Request',
-              head_sha: context.payload.pull_request.head.sha,
-              status: 'completed',
-              conclusion: 'success',
-              completed_at: new Date()
+              sha: context.payload.pull_request.head.sha,
+              state: 'success',
+              context: 'Validate NextJS Pull Request',
+              description: 'All checks passed'
             });
             
-      - name: Update Status Check (Failure)
+      - name: Update Status (Failure)
         if: failure()
         uses: actions/github-script@v6
         with:
           script: |
-            await github.rest.checks.create({
+            await github.rest.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              name: 'Validate NextJS Pull Request',
-              head_sha: context.payload.pull_request.head.sha,
-              status: 'completed',
-              conclusion: 'failure',
-              completed_at: new Date()
+              sha: context.payload.pull_request.head.sha,
+              state: 'failure',
+              context: 'Validate NextJS Pull Request',
+              description: 'Build or tests failed'
             });
