--- a/.github/workflows/validate-nextjs-pr.yml
+++ b/.github/workflows/validate-nextjs-pr.yml
@@ -3,7 +3,7 @@ name: Validate NextJS Pull Request
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-
+  workflow_dispatch:
 jobs:
   build-and-test:
     name: Build and Test NextJS Project
