--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "CUStudentCollabSystem",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -15,16 +16,17 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "pg": "^8.13.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
-    "dotenv": "^16.4.5",
-    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/node": "22.10.0",
