--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.460.0",
+    "module-alias": "^2.2.3",
     "next": "15.0.3",
     "pg": "^8.13.1",
     "react": "19.0.0-rc-66855b96-20241106",
