--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.12.0",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "pg": "^8.13.1",
+    "radix-ui": "^1.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.4",
