--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CUStudentCollabSystem",
+  "name": "custudentcollabsystem",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,15 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clearDBState": "node ./scripts/cleardata.mjs",
-    "insertSampleData": "node ./scripts/sampledata.mjs",
-    "wipeDB": "node ./scripts/deleteDB.mjs",
-    "initializeDB": "node ./scripts/initializeDB.mjs"
+    "cleardb": "node ./scripts/cleardata.mjs",
+    "seeddb": "node ./scripts/sampledata.mjs",
+    "deldb": "node ./scripts/deleteDB.mjs",
+    "initdb": "node ./scripts/initializeDB.mjs"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
