--- a/package.json
+++ b/package.json
@@ -13,21 +13,26 @@
     "initdb": "node ./scripts/initializeDB.mjs"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.3",
     "@clerk/nextjs": "^6.5.1",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^11.13.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
