--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "next": "15.0.3",
     "pg": "^8.13.1",
     "radix-ui": "^1.0.1",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
     "react-big-calendar": "^1.16.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
