--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -23,12 +25,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-table": "^8.20.5",
+    "ably": "^2.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "emoji-mart": "^5.6.0",
     "framer-motion": "^11.12.0",
     "input-otp": "^1.4.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "next": "15.0.3",
@@ -38,10 +44,13 @@
     "react-big-calendar": "^1.16.3",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
