--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "initdb": "node ./scripts/initializeDB.mjs"
   },
   "dependencies": {
+    "@clerk/backend": "^1.21.0",
+    "@clerk/clerk-sdk-node": "^5.1.0",
     "@clerk/nextjs": "^6.5.1",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
@@ -48,6 +50,7 @@
     "react-hook-form": "^7.53.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "svix": "^1.43.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
