--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.53.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.13",
     "svix": "^1.43.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
