--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@clerk/nextjs": "^6.5.1",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^5.16.12",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.2",
@@ -46,6 +49,7 @@
     "pg": "^8.13.1",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
+    "react-admin": "^5.4.2",
     "react-big-calendar": "^1.16.3",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.2",
