--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "moment": "^2.30.1",
     "next": "15.0.3",
     "pg": "^8.13.1",
+    "ra-data-simple-rest": "^5.4.3",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-admin": "^5.4.2",
