--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
+    "@raphiniert/ra-data-postgrest": "^2.4.1",
     "@tanstack/react-table": "^8.20.5",
     "ably": "^2.5.0",
     "class-variance-authority": "^0.7.0",
@@ -46,11 +47,13 @@
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "next": "15.0.3",
+    "next-postgrest": "^0.1.9",
     "pg": "^8.13.1",
-    "ra-data-simple-rest": "^5.4.3",
+    "ra-data-json-server": "^5.4.3",
+    "ra-ui-materialui": "^5.4.3",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
-    "react-admin": "^5.4.2",
+    "react-admin": "^5.4.3",
     "react-big-calendar": "^1.16.3",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.2",
