--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-big-calendar": "^1.16.3",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.2",
+    "recharts": "^2.15.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
