--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@radix-ui/react-toast": "^1.2.3",
     "@raphiniert/ra-data-postgrest": "^2.4.1",
     "@tanstack/react-table": "^8.20.5",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "ably": "^2.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
